# Deep-Lynx-MATLAB

./: .env_sample  .gitignore  NOTICE.txt  README.md  pyproject.toml  settings.py  yapf.sh
.github/workflows/: deploy-main.yml
data/: .gitignore
data/example/: example.m
src/: .gitignore  __init__.py  deep_lynx_import.py  deep_lynx_query.py  edit_matlab_file.py  run_matlab.py
utils/: __init__.py  validate.py
